fixed input requirement for nix-citizen

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -166,7 +166,7 @@ device {
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = L_ALT # Sets "Windows" key as main modifier
-$moveMod = L_ALT
+$moveMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
@@ -177,6 +177,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, R, exec, $reload_waybar
 bind = $mainMod, S, exec, $snip
+bind = $mainMod, F, fullscreen
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, l, movefocus, l
