--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,7 +7,7 @@ monitor=DP-1, 3440x1440@144, auto, 1.0
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = foot
 $fileManager = thunar
 $menu = wofi --show drun
 $reload_waybar = pkill waybar; waybar &
