--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -8,7 +8,7 @@ monitor=DP-1, 3440x1440@144, auto, 1.0
 
 # Set programs that you use
 $terminal = foot
-$fileManager = thunar
+$fileManager = thunar #foot yazi
 $menu = wofi --show drun
 $reload_waybar = pkill waybar; waybar &
 $snip = snip
@@ -33,6 +33,7 @@ exec-once = waybar & hyprpaper & dunst &
 env = GTK_THEME,Tokyo-Night-Dark
 env = GTK_ICON_THEME,Adwaita
 
+env = HYPRCURSOR_THEME,Spore-hyprcursor-theme
 env = XCURSOR_SIZE,14
 env = HYPRCURSOR_SIZE,14
 env = XDG_CURRENT_DESKTOP,Hyprland
