--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,7 +23,8 @@ $snip = snip
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & dunst &
+exec-once = waybar & swww-daemon & dunst &
+exec-once = swww img ~/kani/Photos/Wallpapers/Computer/1290008.jpg
 
 #############################
 ### ENVIRONMENT VARIABLES ###
