--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -31,8 +31,9 @@ exec-once = swww img ~/kani/Photos/Wallpapers/Computer/1290008.jpg
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-env = GTK_THEME,Tokyo-Night-Dark
+env = GTK_THEME,Adwaita-dark
 env = GTK_ICON_THEME,Adwaita
+env = GTK_APPLICATION_PREFER_DARK_THEME,1
 
 env = HYPRCURSOR_THEME,Spore-hyprcursor-theme
 env = XCURSOR_SIZE,14
