--- a/config/mango/config.conf
+++ b/config/mango/config.conf
@@ -3,7 +3,7 @@
 exec-once= waybar
 
 # Window effect
-blur=0
+blur=5
 blur_layer=0
 blur_optimized=1
 blur_params_num_passes = 2
@@ -22,7 +22,7 @@ shadows_position_x = 0
 shadows_position_y = 0
 shadowscolor= 0x000000ff
 
-border_radius=6
+border_radius=9
 no_radius_when_single=0
 focused_opacity=1.0
 unfocused_opacity=1.0
@@ -118,10 +118,10 @@ gappoh=10
 gappov=10
 scratchpad_width_ratio=0.8
 scratchpad_height_ratio=0.9
-borderpx=4
+borderpx=3
 rootcolor=0x201b14ff
-bordercolor=0x444444ff
-focuscolor=0xc9b890ff
+bordercolor=0x595959ab
+focuscolor=0xea617fff
 maximizescreencolor=0x89aa61ff
 urgentcolor=0xad401fff
 scratchpadcolor=0x516c93ff
@@ -157,10 +157,10 @@ bind=ALT,q,killclient,
 
 # switch window focus
 bind=SUPER,Tab,focusstack,next
-bind=ALT,Left,focusdir,left
-bind=ALT,Right,focusdir,right
-bind=ALT,Up,focusdir,up
-bind=ALT,Down,focusdir,down
+bind=SUPER,Left,focusdir,left
+bind=SUPER,Right,focusdir,right
+bind=SUPER,Up,focusdir,up
+bind=SUPER,Down,focusdir,down
 
 # swap window
 bind=SUPER+SHIFT,Up,exchange_client,up
@@ -171,7 +171,7 @@ bind=SUPER+SHIFT,Right,exchange_client,right
 # switch window status
 bind=SUPER,g,toggleglobal,
 bind=ALT,Tab,toggleoverview,
-bind=ALT,backslash,togglefloating,
+bind=ALT,v,togglefloating,
 bind=ALT,a,togglemaximizescreen,
 bind=ALT,f,togglefullscreen,
 bind=ALT+SHIFT,f,togglefakefullscreen,
@@ -188,35 +188,35 @@ bind=ALT,x,switch_proportion_preset,
 bind=SUPER,n,switch_layout
 
 # tag switch
-bind=SUPER,Left,viewtoleft,0
+bind=alt,Left,viewtoleft,0
 bind=CTRL,Left,viewtoleft_have_client,0
-bind=SUPER,Right,viewtoright,0
+bind=alt,Right,viewtoright,0
 bind=CTRL,Right,viewtoright_have_client,0
 bind=CTRL+SUPER,Left,tagtoleft,0
 bind=CTRL+SUPER,Right,tagtoright,0
 
-bind=Ctrl,1,view,1,0
-bind=Ctrl,2,view,2,0
-bind=Ctrl,3,view,3,0
-bind=Ctrl,4,view,4,0
-bind=Ctrl,5,view,5,0
-bind=Ctrl,6,view,6,0
-bind=Ctrl,7,view,7,0
-bind=Ctrl,8,view,8,0
-bind=Ctrl,9,view,9,0
+bind=Alt,1,view,1,0
+bind=Alt,2,view,2,0
+bind=Alt,3,view,3,0
+bind=Alt,4,view,4,0
+bind=Alt,5,view,5,0
+bind=Alt,6,view,6,0
+bind=Alt,7,view,7,0
+bind=Alt,8,view,8,0
+bind=Alt,9,view,9,0
 
 # tag: move client to the tag and focus it
 # tagsilent: move client to the tag and not focus it
 # bind=Alt,1,tagsilent,1
-bind=Alt,1,tag,1,0
-bind=Alt,2,tag,2,0
-bind=Alt,3,tag,3,0
-bind=Alt,4,tag,4,0
-bind=Alt,5,tag,5,0
-bind=Alt,6,tag,6,0
-bind=Alt,7,tag,7,0
-bind=Alt,8,tag,8,0
-bind=Alt,9,tag,9,0
+bind=shift+Alt,1,tag,1,0
+bind=shift+Alt,2,tag,2,0
+bind=shift+Alt,3,tag,3,0
+bind=shift+Alt,4,tag,4,0
+bind=shift+Alt,5,tag,5,0
+bind=shift+Alt,6,tag,6,0
+bind=shift+Alt,7,tag,7,0
+bind=shift+Alt,8,tag,8,0
+bind=shift+Alt,9,tag,9,0
 
 # monitor switch
 bind=alt+shift,Left,focusmon,left
