--- a/config/mango/config.conf
+++ b/config/mango/config.conf
@@ -1,13 +1,13 @@
 # More option see https://github.com/DreamMaoMao/mango/wiki/
 
-exec-once= waybar
+exec-once= waybar && swww
+exec-once= swaybg -i ~/kani/Photos/Wallpapers/Computer/1290008.jpg
+
+# External monitor: 1440p, 144Hz, positioned to the right
+monitorrule=DP-1,1,1,tile,0,1,1920,0,3440,1440,144
 
 # Window effect
-<<<<<<< HEAD
 blur=5
-=======
-blur=0
->>>>>>> refs/remotes/origin/main
 blur_layer=0
 blur_optimized=1
 blur_params_num_passes = 2
@@ -26,11 +26,7 @@ shadows_position_x = 0
 shadows_position_y = 0
 shadowscolor= 0x000000ff
 
-<<<<<<< HEAD
 border_radius=9
-=======
-border_radius=6
->>>>>>> refs/remotes/origin/main
 no_radius_when_single=0
 focused_opacity=1.0
 unfocused_opacity=1.0
@@ -126,17 +122,10 @@ gappoh=10
 gappov=10
 scratchpad_width_ratio=0.8
 scratchpad_height_ratio=0.9
-<<<<<<< HEAD
 borderpx=3
 rootcolor=0x201b14ff
 bordercolor=0x595959ab
 focuscolor=0xea617fff
-=======
-borderpx=4
-rootcolor=0x201b14ff
-bordercolor=0x444444ff
-focuscolor=0xc9b890ff
->>>>>>> refs/remotes/origin/main
 maximizescreencolor=0x89aa61ff
 urgentcolor=0xad401fff
 scratchpadcolor=0x516c93ff
@@ -172,17 +161,10 @@ bind=ALT,q,killclient,
 
 # switch window focus
 bind=SUPER,Tab,focusstack,next
-<<<<<<< HEAD
 bind=SUPER,Left,focusdir,left
 bind=SUPER,Right,focusdir,right
 bind=SUPER,Up,focusdir,up
 bind=SUPER,Down,focusdir,down
-=======
-bind=ALT,Left,focusdir,left
-bind=ALT,Right,focusdir,right
-bind=ALT,Up,focusdir,up
-bind=ALT,Down,focusdir,down
->>>>>>> refs/remotes/origin/main
 
 # swap window
 bind=SUPER+SHIFT,Up,exchange_client,up
@@ -193,11 +175,7 @@ bind=SUPER+SHIFT,Right,exchange_client,right
 # switch window status
 bind=SUPER,g,toggleglobal,
 bind=ALT,Tab,toggleoverview,
-<<<<<<< HEAD
 bind=ALT,v,togglefloating,
-=======
-bind=ALT,backslash,togglefloating,
->>>>>>> refs/remotes/origin/main
 bind=ALT,a,togglemaximizescreen,
 bind=ALT,f,togglefullscreen,
 bind=ALT+SHIFT,f,togglefakefullscreen,
@@ -214,20 +192,13 @@ bind=ALT,x,switch_proportion_preset,
 bind=SUPER,n,switch_layout
 
 # tag switch
-<<<<<<< HEAD
 bind=alt,Left,viewtoleft,0
 bind=CTRL,Left,viewtoleft_have_client,0
 bind=alt,Right,viewtoright,0
-=======
-bind=SUPER,Left,viewtoleft,0
-bind=CTRL,Left,viewtoleft_have_client,0
-bind=SUPER,Right,viewtoright,0
->>>>>>> refs/remotes/origin/main
 bind=CTRL,Right,viewtoright_have_client,0
 bind=CTRL+SUPER,Left,tagtoleft,0
 bind=CTRL+SUPER,Right,tagtoright,0
 
-<<<<<<< HEAD
 bind=Alt,1,view,1,0
 bind=Alt,2,view,2,0
 bind=Alt,3,view,3,0
@@ -237,22 +208,10 @@ bind=Alt,6,view,6,0
 bind=Alt,7,view,7,0
 bind=Alt,8,view,8,0
 bind=Alt,9,view,9,0
-=======
-bind=Ctrl,1,view,1,0
-bind=Ctrl,2,view,2,0
-bind=Ctrl,3,view,3,0
-bind=Ctrl,4,view,4,0
-bind=Ctrl,5,view,5,0
-bind=Ctrl,6,view,6,0
-bind=Ctrl,7,view,7,0
-bind=Ctrl,8,view,8,0
-bind=Ctrl,9,view,9,0
->>>>>>> refs/remotes/origin/main
 
 # tag: move client to the tag and focus it
 # tagsilent: move client to the tag and not focus it
 # bind=Alt,1,tagsilent,1
-<<<<<<< HEAD
 bind=shift+Alt,1,tag,1,0
 bind=shift+Alt,2,tag,2,0
 bind=shift+Alt,3,tag,3,0
@@ -262,17 +221,6 @@ bind=shift+Alt,6,tag,6,0
 bind=shift+Alt,7,tag,7,0
 bind=shift+Alt,8,tag,8,0
 bind=shift+Alt,9,tag,9,0
-=======
-bind=Alt,1,tag,1,0
-bind=Alt,2,tag,2,0
-bind=Alt,3,tag,3,0
-bind=Alt,4,tag,4,0
-bind=Alt,5,tag,5,0
-bind=Alt,6,tag,6,0
-bind=Alt,7,tag,7,0
-bind=Alt,8,tag,8,0
-bind=Alt,9,tag,9,0
->>>>>>> refs/remotes/origin/main
 
 # monitor switch
 bind=alt+shift,Left,focusmon,left
