--- a/config/mango/config.conf
+++ b/config/mango/config.conf
@@ -1,6 +1,6 @@
 # More option see https://github.com/DreamMaoMao/mango/wiki/
 
-exec-once= waybar && swww
+exec-once= waybar
 exec-once= swaybg -i ~/kani/Photos/Wallpapers/Computer/1290008.jpg
 
 # External monitor: 1440p, 144Hz, positioned to the right
