swaybg mode swap

--- a/config/mango/config.conf
+++ b/config/mango/config.conf
@@ -1,7 +1,7 @@
 # More option see https://github.com/DreamMaoMao/mango/wiki/
 
 exec-once= waybar
-exec-once= swaybg -i ~/kani/Photos/Wallpapers/Computer/1290008.jpg
+exec-once= swaybg -i ~/kani/Photos/Wallpapers/Computer/1290008.jpg -m fill 
 
 # External monitor: 1440p, 144Hz, positioned to the right
 monitorrule=DP-1,1,1,tile,0,1,1920,0,3440,1440,144
